--- a/.github/workflows/pylint_flake8.yml
+++ b/.github/workflows/pylint_flake8.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: Pylint-Flake8
 
 on: [push]
 
@@ -19,6 +19,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
         pip install flake8
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
