--- a/.github/workflows/pylint_flake8.yml
+++ b/.github/workflows/pylint_flake8.yml
@@ -25,4 +25,4 @@ jobs:
         pylint $(git ls-files '*.py')
     - name: Analysing the code with flake8
       run: |
-        flake8 $(git ls-files '*.py')
+        flake8 $(git ls-files '*.py') --count --select=E9,F63,F7,F82 --show-source --statistics
