--- a/.github/workflows/pylint_flake8.yml
+++ b/.github/workflows/pylint_flake8.yml
@@ -22,7 +22,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        python -m pylint $(git ls-files '*.py')
     - name: Analysing the code with flake8
       run: |
         flake8 $(git ls-files '*.py') --count --select=E9,F63,F7,F82 --show-source --statistics
