--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -21,4 +21,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Analysing the code with flake8
       run: |
-        flake8 $(git ls-files '*.py') --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 $(git ls-files '*.py') --count --show-source --statistics
